--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -24,11 +24,13 @@
   align-items: center;
   padding-top: 6rem;
 }
+.about-header-text {
+  font-size: 5rem;
+}
 
 .about-body {
   width: 100%;
   display: flex;
-
   justify-content: space-between;
   align-items: center;
 }
@@ -50,7 +52,17 @@
   justify-content: space-around;
   align-items: flex-start;
   margin-left: 10rem;
-  padding-bottom: 10rem;
+  padding-bottom: 5rem;
+}
+
+.about-ul a,
+.about-text a {
+  text-decoration: none;
+  color: #fff;
+}
+.about-ul a:hover,
+.about-text a:hover {
+  color: rgba(0, 212, 255, 1);
 }
 .about-text {
   width: 60%;
@@ -59,18 +71,23 @@
 
 @media only screen and (max-height: 600px) {
   .about {
-    min-height: 650px;
+    height: 100%;
   }
 }
 
 @media only screen and (max-width: 1328px) {
+  .about {
+    height: 100%;
+    padding-bottom: 4rem;
+  }
   .about-body {
     flex-direction: column;
   }
   .about-img {
     margin: 0;
-    width: 90%;
+    min-width: 50%;
     max-width: 50%;
+
     height: auto;
   }
   .about-text {
@@ -79,6 +96,11 @@
     padding: 2rem;
   }
   .about-ul {
-    padding-bottom: 0rem;
+    padding-bottom: 2rem;
+    font-size: 14px;
+    padding-right: 2rem;
+  }
+  .about-header-text {
+    font-size: 2.5rem;
   }
 }
